# Miniprojekt-1

./: CMakeLists.txt  Dynamic_Double.cpp  Main.cpp  OneWayList+Tail.cpp  OneWayList.cpp  TwoWayList.cpp  dynamic_array.cpp  generator.cpp  gowno.cpp  random_number_file.txt  random_numbers.txt  tempCodeRunnerFile.cpp  testownik.cpp  wzor.cpp
Miniprojekt-1/Miniprojekt-1-main/: Main.cpp  README.md  generator.cpp  random_number_file.txt  testownik.cpp
Miniprojekt-1/Miniprojekt-1-main/struktury_danych/: OneWayList+Tail.cpp  TwoWayList.cpp  dynamic_array.cpp
Miniprojekt-2/: kopiec.cpp  tablica.cpp  testowanie.cpp
struktury_danych/: OneWayList+Tail.cpp  OneWayList.cpp  TwoWayList.cpp  dynamic_array.cpp
